--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,13 @@ body, html {
 	margin: 0px;
     height: 100%;   
 }
+
+.btn.btn-default {
+    background-color: yellow;
+}
+
+.postButtons{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
