--- a/styles/common.css
+++ b/styles/common.css
@@ -1,44 +1,38 @@
-body{
-    background-image: url(../images/background.jpg);
-    width: auto;
-     /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: initial;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top;
-  
+.common-body{
+	background-image: url(../images/background.jpg);
+	width: auto;
+	 /* Full height */
+	height: 100%;
+	margin-top: 2px;
+	margin-left: 5px;
+	/* Center and scale the image nicely */
+	background-position: initial;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center top; 
 }
 
 .header-class{
-    height: 60px;
-    width: auto;
-    background-color: lightgrey;
-    
+	height: 60px;
+	width: auto;  
 }
 
 .header-bar{
-    display: flex;
-    flex-direction: row;
-    align-items: initial;
-    
-
+	display: flex;
+	flex-direction: row;
+	align-items: initial;
 }
 
 
 .side-logo{ 
-    margin-left: 5px;
-    padding: 1px;
-    margin: 2px;
+	margin-left: 5px;
+	padding: 1px;
+	margin: 2px;
 }
 
 .home-buttons{
-    margin-left: 1000px;
-    margin-top: 6px;
-    
-    
+	margin-left: 1000px;
+	margin-top: 6px;   
 }
 
  .button-class{
@@ -46,7 +40,7 @@ body{
     text-align: center;
     font-size: 15px;
     background-color: blue; 
-     color:white
+    color:white;   
 } 
 
 
@@ -54,8 +48,7 @@ body{
     width: 100%;
     height: 100vh;
     position: relative;
-    text-align: center; 
-    
+    margin-left: 45%;  
 }
 
 
@@ -71,3 +64,4 @@ body{
     text-align: center;
     font-weight: normal;
 }
+
