Fixed bugs in post, signin and signout page.

--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -11,7 +11,7 @@ body{
 
 .card-new{
     border-radius: 25px;
-    height: 140px;
+    height: 150px;
     display: flex;
     flex-direction: row;
     border-radius: 30px;
@@ -28,7 +28,7 @@ body{
 
 
 .side-square-wrapper{
-    height: 140px;
+    height: 150px;
     width: 17%;
     text-align: center;
     background-color: white;
@@ -41,24 +41,32 @@ body{
 }
 
 .custom-card-body{
-    height: 140px;
+    height: 150px; 
     background-color: #DCDCDC;
     width: 83%;
-    padding: 8px;
-    font-size: 12px;
+    padding: 5px;
+    font-size: 14px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;   
+    border-bottom-right-radius: 20px; 
 }
 
 .card-body-heading{
    color:gray;
-   font-size: 13px;
+   font-size: 16px;
    font-weight: 500;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
-   padding-bottom: 10px;
+   padding-bottom: 5px;
    
+}
+
+.post-text{
+    overflow: hidden; 
+    white-space: normal; 
+
+    height: 4.8em;  
+    text-overflow: -o-ellipsis-lastline; 
 }
 
 .trash-button{
@@ -69,19 +77,17 @@ body{
 }
 
 .ellipsis{
-    margin-left: 370px;
+   margin-left: 370px;
+   color: grey;
     cursor: pointer;
-    float:right;
-    padding-top: 6px;
+    padding-right: 120px;
+    margin-bottom: 4px; 
+ 
   
 }
 
 
-/*.container {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-gap: 20px; 
-} */
+
 
 
 
