--- a/styles/index.css
+++ b/styles/index.css
@@ -1,22 +1,40 @@
-#main {
-    background-image: url(../images/background.jpg);
-	height: 100%;
-    background-repeat: no-repeat;
-	background-size: cover;  
-    background-position: center;
+html, body{
+    height : 100%;
 }
 
-body, html {
-	margin: 0px;
-    height: 100%;   
+.common-body{
+  background-image: url(../images/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  min-width : 100%;
+  min-height: 100%;
 }
 
-.btn.btn-default {
-    background-color: yellow;
+
+
+.post-buttons{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    margin-left: 45%;
+    
 }
 
-.postButtons{
-    position: absolute;
+
+.centre-button{
+    position: relative;
     top: 50%;
-    left: 50%;
+    transform: translateY(750%);
+    margin: 5px;
+    background-color: darkgoldenrod;
+    color: black;
+    text-align: center;
+    font-size: 15px;
+    text-align: center;
+    font-weight: normal;
 }
+
